Fix: put pronostic part first to have more visibility for results in row

--- a/styles.css
+++ b/styles.css
@@ -56,45 +56,50 @@ form button {
     font-weight: bold;
     cursor: pointer; 
 }
+/* @Pronostic*/
 #horse-list-container {
+    display: flex;
+    flex-direction:column;
+    align-items:center;
     background-color: #fff;
     border-radius: 5px;
     padding: 20px;
-    width: 400px;
-    height: 700px;
+    width: 100vw;
+    height: fit-content;
     position: relative; 
     overflow-y: auto;
-    
+    border : 1px black solid; 
 }
 
 #horse-list-container h3 {
-    margin-bottom: 10px;
-    
+    margin-bottom:15px;
     width: fit-content;
     height: fit-content;
 }
-
-#horse-list {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-    overflow: auto; /* Ajout de l'attribut overflow pour activer la barre de défilement */
-    max-height: 575px; /* Définir une hauteur maximale pour afficher la barre de défilement */
-    box-shadow: black 2px;
-    padding: 5px;           
+#overflow-horse-list{
+  width: 90VW; /* Définissez la largeur souhaitée pour le conteneur */
+  overflow-x: scroll; /* Ajoute une barre de défilement horizontale si nécessaire */
+  white-space: nowrap; /* Empêche le retour à la ligne des éléments dans la liste */
 }
 
+#horse-list {
+  display: inline-block; /* Permet à la liste de s'adapter à la largeur de son contenu */
+  padding: 0; /* Supprimez les marges internes de la liste pour éviter l'espacement inutile */
+  margin: 0; /* Supprimez les marges externes pour un espacement cohérent */
+}
 
+/* @card */
 .horse-card {
-    display: flex;
-    align-items: center;
+    display: inline-block;
     justify-content: space-between;
     background: rgb(2,0,36);
     background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(10, 212, 20) 0%, rgb(4, 255, 0) 18%, rgba(255,255,255,1) 18%);
     border: black solid 1px;
     border-radius: 10px;
     padding: 10px;
-    margin-bottom: 10px;
+    margin:15px;
+
+    
 }
 
 .horse-card .horse-id {
@@ -116,7 +121,7 @@ form button {
     text-decoration: none;
     padding-right: 2px;
 }
-
+/* @BTN sort */
 #sort-btn {
     padding: 10px 20px;
     border: none;
@@ -125,10 +130,9 @@ form button {
     color: #fff;
     font-weight: bold;
     cursor: pointer;
-    position: absolute;
-    bottom: 15px;
-    
-    left: 170px;
+    position: relative;
+    margin : 10px;
+    width: 5vw;
 }
 .trash-horse{
     border: black 2px;
